// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders controlled input correctly 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  -webkit-appearance: textfield;
  width: 90%;
  max-height: 28px;
  height: 28px;
  padding: 0 7px 0 7px;
  background: none;
  border: 1px solid #323335;
  border-radius: 3px;
  font-family: proxima-nova,Proxima Nova,Helvetica Neue,Helvetica,Arial,sans-serif;
  font-weight: 300;
  color: white;
  font-size: 13px;
  line-height: 28px;
}

.c0[type='search'] {
  border-color: #c5c5c5;
}

.c0::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c0::-webkit-search-cancel-button {
  -webkit-appearance: none;
  width: 11px;
  height: 11px;
  background: url(test-file-stub) no-repeat center;
  background-size: contain;
}

.c0::-webkit-input-placeholder {
  text-align: left;
  font-style: italic;
}

.c0::-moz-placeholder {
  text-align: left;
  font-style: italic;
}

.c0:-ms-input-placeholder {
  text-align: left;
  font-style: italic;
}

.c0::placeholder {
  text-align: left;
  font-style: italic;
}

.c0::-webkit-input-placeholder {
  text-align: left;
  font-style: italic;
  width: 100%;
}

.c0:focus {
  border: 1px solid #006cff;
}

<Input
  action={[Function]}
  autoComplete="off"
  color="dark"
  controlled={true}
  id=""
  name="search"
  placeholder="Type to filter..."
  tab={0}
  type="search"
  value="test string"
>
  <styled.input
    autoComplete="off"
    color="dark"
    id=""
    name="search"
    onChange={[Function]}
    placeholder="Type to filter..."
    tabIndex={0}
    type="search"
    value="test string"
  >
    <input
      autoComplete="off"
      className="c0"
      color="dark"
      id=""
      name="search"
      onChange={[Function]}
      placeholder="Type to filter..."
      tabIndex={0}
      type="search"
      value="test string"
    />
  </styled.input>
</Input>
`;

exports[`renders uncontrolled input correctly 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  -webkit-appearance: textfield;
  width: 90%;
  max-height: 28px;
  height: 28px;
  padding: 0 7px 0 7px;
  background: none;
  border: 1px solid #777777;
  border-radius: 3px;
  font-family: proxima-nova,Proxima Nova,Helvetica Neue,Helvetica,Arial,sans-serif;
  font-weight: 300;
  color: #777777;
  font-size: 13px;
  line-height: 28px;
}

.c0[type='search'] {
  border-color: #c5c5c5;
}

.c0::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c0::-webkit-search-cancel-button {
  -webkit-appearance: none;
  width: 11px;
  height: 11px;
  background: url(test-file-stub) no-repeat center;
  background-size: contain;
}

.c0::-webkit-input-placeholder {
  text-align: left;
  font-style: italic;
}

.c0::-moz-placeholder {
  text-align: left;
  font-style: italic;
}

.c0:-ms-input-placeholder {
  text-align: left;
  font-style: italic;
}

.c0::placeholder {
  text-align: left;
  font-style: italic;
}

.c0::-webkit-input-placeholder {
  text-align: left;
  font-style: italic;
  width: 100%;
}

.c0:focus {
  border: 1px solid #006cff;
}

<Input
  action={[Function]}
  autoComplete="off"
  color="light"
  controlled={false}
  id=""
  name="search"
  placeholder="Type to filter..."
  tab={0}
  type="search"
>
  <styled.input
    autoComplete="off"
    color="light"
    id=""
    name="search"
    onChange={[Function]}
    placeholder="Type to filter..."
    tabIndex={0}
    type="search"
  >
    <input
      autoComplete="off"
      className="c0"
      color="light"
      id=""
      name="search"
      onChange={[Function]}
      placeholder="Type to filter..."
      tabIndex={0}
      type="search"
    />
  </styled.input>
</Input>
`;
